--- a/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
@@ -1130,8 +1130,8 @@
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="160" id="rGS-gb-AdD"/>
                                                 </constraints>
                                             </view>
-                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xxs-Ho-MrO">
-                                                <rect key="frame" x="245" y="15" width="99" height="30"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xxs-Ho-MrO">
+                                                <rect key="frame" x="270" y="10" width="90" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="90" id="W3j-s8-NNe"/>
                                                     <constraint firstAttribute="height" constant="40" id="hlV-fZ-G4P"/>
